<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, AndroidTabLayoutActivity!</string>
    <string name="app_name">Informatica MDM</string>
    	<string name="consumerid"></string>
    	<string name="suffix"></string>
    	<string name="firstName"></string>
    	<string name="middleName"></string>
    	<string name="lastName"></string>
    	<string name="gender"></string>
    	<string name="telephone"></string>
    	<string name="dob"></string>
    	<string name="objectid"></string>
	<string name="save">Save</string>
	<string name="dialog_text">Simple Dialog</string>
	<string name="btn_start_dialog_label">Dialog</string>
	<string name="btn_finish_dialog_label">Close</string>
	<string name="dialog">Dialog</string>
</resources>


